--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,16 @@
 *.bak
 *.backup
 *.old
+Program.cs.* # Ignora todos os backups de Program.cs
+appsettings.json.* # Ignora todos os backups de appsettings.json
+Backups/
 
 # Dependências do Node.js
 node_modules/
 npm-debug.log
+
+# Arquivos de dados e CSV de exemplo
+*.csv
 
 # Arquivos do Sistema Operacional
 Thumbs.db
