--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "recharts": "^3.2.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5"
   }
 }
