--- a/tests/EmpresaX.POS.API.Tests/EmpresaX.POS.API.Tests.csproj
+++ b/tests/EmpresaX.POS.API.Tests/EmpresaX.POS.API.Tests.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.6.6" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.7" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
